# kayrx

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: linux.yaml
kayrx/app/: Cargo.toml
kayrx/async/: Cargo.toml
kayrx/async/src/: atomic_waker.rs  cell.rs  future.rs  kalloc.rs  lib.rs  park.rs
kayrx/async/src/karx/: header.rs
kayrx/async/src/karx/executor/: mod.rs  thread_pool.rs
kayrx/async/src/karx/executor/internal/: mod.rs
kayrx/async/src/timer/: clock.rs  delay_queue.rs  error.rs  throttle.rs  timeout.rs
kayrx/async/src/timer/driver/: entry.rs  mod.rs
kayrx/async/src/timer/wheel/: mod.rs
kayrx/db/timer/: clock.rs  mod.rs  timeout.rs
kayrx/db/timer/driver/: atomic_waker.rs  future.rs  handle.rs  mod.rs  park.rs  stack.rs
kayrx/db/timer/wheel/: mod.rs
kayrx/engine/: Cargo.toml
kayrx/engine/src/karx/: join_handle.rs  mod.rs  raw.rs
kayrx/engine/src/karx/executor/internal/: machine.rs  processor.rs  system.rs
kayrx/engine/src/timer/: clock.rs  instant.rs  interval.rs  mod.rs
kayrx/engine/src/timer/driver/: handle.rs  registration.rs
kayrx/engine/src/timer/wheel/: level.rs
kayrx/eternal/: Cargo.toml
kayrx/eternal/src/: lib.rs
kayrx/eternal/src/server/: config.rs  mod.rs
kayrx/karx/: Cargo.toml  README.md
kayrx/karx/src/: futures.rs  lib.rs  task.rs
kayrx/karx/src/executor/: mod.rs
kayrx/karx/src/executor/internal/: machine.rs  mod.rs  processor.rs  system.rs
kayrx/karx/src/karx/: mod.rs  task.rs
kayrx/kayrx/: Cargo.toml
kayrx/kayrx/kayrx-macro/: Cargo.toml
kayrx/kayrx/kayrx-macro/src/: lib.rs
kayrx/kayrx/src/: lib.rs
kayrx/kayrx/src/future/: mod.rs
kayrx/kayrx/src/karx/: join_karx.rs  karx.rs  local.rs  mod.rs  reactor.rs  runtime.rs  task.rs  utils.rs  yield_now.rs
kayrx/kayrx/src/karx/executor/: block_on.rs  builder.rs  current.rs  mod.rs  spawn.rs  spawn_blocking.rs
kayrx/kayrx/src/karx/executor/internal/: mod.rs
kayrx/kayrx/src/karx/karx/: block.rs  block_on.rs  builder.rs  current.rs  exec.rs  join_karx.rs  karx.rs  local.rs  mod.rs  spawn.rs  spawn_blocking.rs  yield_now.rs
kayrx/kayrx/src/karx/karx/kernel/: mod.rs
kayrx/kayrx/src/karx/kernel/: header.rs  join_handle.rs  mod.rs
kayrx/kayrx/src/lxar/: mod.rs  poll.rs
kayrx/kayrx/src/lxar/event/: mod.rs
kayrx/kayrx/src/lxar/net/: mod.rs  tcp.rs  udp.rs
kayrx/kayrx/src/lxar/net/uds/: datagram.rs  listener.rs  mod.rs  socket.rs  stream.rs
kayrx/kayrx/src/lxar/sys/: awakener.rs  dlsym.rs  epoll.rs  io.rs  mod.rs  ready.rs  tcp.rs  udp.rs
kayrx/kayrx/src/lxio/: mod.rs  poll.rs
kayrx/kayrx/src/lxio/event/: mod.rs
kayrx/kayrx/src/lxio/net/: mod.rs  tcp.rs  udp.rs
kayrx/kayrx/src/lxio/net/uds/: datagram.rs  listener.rs  mod.rs  socket.rs  stream.rs
kayrx/kayrx/src/lxio/sys/: awakener.rs  dlsym.rs  epoll.rs  io.rs  ready.rs  tcp.rs  udp.rs
kayrx/kayrx/src/net/: mod.rs
kayrx/kayrx/src/net/reactor/: mod.rs  poll_evented.rs  registration.rs
kayrx/kayrx/src/net/tcp/: listener.rs  mod.rs  stream.rs
kayrx/kayrx/src/net/udp/: mod.rs
kayrx/kayrx/src/net/uds/: datagram.rs  listener.rs  mod.rs  stream.rs  ucred.rs
kayrx/kayrx/src/reactor/: background.rs  mod.rs  poll_evented.rs  registration.rs
kayrx/kayrx/src/sync/: mod.rs  rwlock.rs  spin_lock.rs  waker_set.rs
kayrx/kayrx/src/timer/: clock.rs  delay.rs  delay_queue.rs  instant.rs  interval.rs  mod.rs  throttle.rs  timeout.rs
kayrx/kayrx/src/timer/clock/: mod.rs
kayrx/kayrx/src/timer/driver/: atomic_stack.rs  atomic_waker.rs  cell.rs  entry.rs  mod.rs  now.rs  park.rs  registration.rs  stack.rs
kayrx/kayrx/tests/: tcp.rs  uds.rs
kayrx/kernel/: Cargo.toml
kayrx/kernel/kayrx-macro/: README.md
kayrx/kernel/src/: lib.rs
kayrx/kernel/src/karx/: futures.rs  mod.rs  runtime.rs
kayrx/kernel/src/karx/karx/: block.rs  current.rs  exec.rs  join_karx.rs  local.rs  utils.rs  yield_now.rs
kayrx/kernel/src/karx/karx/kernel/: mod.rs  raw.rs  task.rs
kayrx/kernel/src/timer/: deadline.rs  mod.rs
kayrx/kernel/src/timer/driver/: atomic_stack.rs  entry.rs  handle.rs  mod.rs  park.rs  registration.rs  stack.rs
kayrx/kernel/src/timer/wheel/: level.rs
kayrx/kernel/tests/: uds.rs
kayrx/linux/: LICENSE
kayrx/lxar/: Cargo.toml
kayrx/lxar/src/: lib.rs  token.rs
kayrx/lxar/src/event/: mod.rs
kayrx/lxar/src/net/: tcp.rs  udp.rs
kayrx/lxar/src/net/uds/: datagram.rs  listener.rs  stream.rs
kayrx/lxar/src/sys/: awakener.rs  dlsym.rs  epoll.rs  io.rs  ready.rs  tcp.rs  udp.rs
kayrx/net/: Cargo.toml  README.md
kayrx/net/src/: builder.rs  config.rs  lib.rs  openssl.rs  rustls.rs  service.rs  signals.rs  test.rs  worker.rs
kayrx/net/src/driver/: mod.rs  poll_evented.rs  registration.rs
kayrx/net/src/driver/lxar/event/: mod.rs
kayrx/net/src/driver/lxar/net/: tcp.rs  udp.rs
kayrx/net/src/driver/lxar/net/uds/: datagram.rs  listener.rs  stream.rs
kayrx/net/src/driver/lxar/sys/: awakener.rs  dlsym.rs  epoll.rs  io.rs  ready.rs  tcp.rs  udp.rs
kayrx/net/src/server/: accept.rs  builder.rs  config.rs  mod.rs  openssl.rs  rustls.rs  service.rs  signals.rs  socket.rs  test.rs  testing.rs  worker.rs
kayrx/net/src/server/util/: counter.rs
kayrx/net/src/tcp/: listener.rs  mod.rs  stream.rs
kayrx/net/src/udp/: mod.rs
kayrx/net/src/uds/: datagram.rs  listener.rs  mod.rs  stream.rs
kayrx/timer/: Cargo.toml  README.md
kayrx/timer/src/: clock.rs  delay.rs  delay_queue.rs  instant.rs  interval.rs  lib.rs  throttle.rs  timeout.rs
kayrx/timer/src/driver/: atomic_stack.rs  atomic_waker.rs  entry.rs  handle.rs  mod.rs  registration.rs  stack.rs
kayrx/timer/src/wheel/: level.rs
src/: lib.rs
src/udas/: mod.rs
src/web/: mod.rs
