[package]
name = "kayrx-karx"
version = "0.1.1"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-karx/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "net", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = []

tracing = ["log"]

[dependencies]
# futures-runtime
anyhow = "1"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = [ "std" ] }

# karx-runtime
crossbeam-channel = "0.4.2"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
lazy_static = "1.4.0"
log = { version = "0.4.8", optional = true }
num_cpus = "1.12.0"
once_cell = "1.3.1"

[dev-dependencies]
crossbeam = "0.7.3"
crossbeam-utils = "0.7.2"
futures = "0.3.4"
lazy_static = "1.4.0"
futures-timer = "3.0.2"
simple_logger = "1.6.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1