[package]
name = "kayrx"
version = "0.11.0"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "net", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
kayrx-karx = "0.1.1"
kayrx-timer = "0.1.1"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1