[package]
name = "kayrx"
version = "0.16.5"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "net", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["macro"]
macro = ["kayrx-macro"]

[dependencies]
kayrx-macro = { version =  "1.1.0", optional = true }
crossbeam-channel = "0.4.2"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
futures-core = { version = "0.3.4", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [ "std" ] }
futures-io = "0.3.4"
log =  "0.4.8" 
num_cpus = "1.12.0"
once_cell = "1.3.1"
pin-project-lite = "0.1.4"
pin-utils = "0.1.0-alpha.4"
slab = "0.4.2"
# lxio
net2 = "0.2"
iovec = "0.1.4"
# net, reactor
lazy_static = "1.2.0"
parking_lot = "0.9.0"
libc = "0.2.48"
async-datagram = "3.0.0"
async-ready = "3.0.0"
# futures-runtime
anyhow = "1"
futures-executor = "0.3"

[dev-dependencies]
futures = {version = "0.3.4", features = ["thread-pool"]} 
bytes = "0.4.11"
tempdir = "0.3.7"
rand = "0.7.0"
env_logger = { version = "0.6.0", default-features = false }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1