[package]
name = "kayrx-lxar"
version = "0.10.0"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-lxar/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "net", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []


[dependencies]
libc = "0.2.48"
log = "0.4"
net2 = "0.2"
iovec = "0.1.4"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1