[package]
name = "kayrx-net"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-net/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "net", "tcp", "udp"]
license = "MIT"
readme = "README.md"
edition = "2018"

[features]
default = []

[dependencies]
ntex-rt = "0.1.1"