[package]
name = "kayrx-timer"
version = "0.1.1"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-timer/"
repository = "https://github.com/kayrx/kayrx"
description = "The Kayrx Framework"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "net", "http", "web"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = []

[dependencies]
futures-core = "0.3"
pin-project-lite = "0.1"
slab = "0.4.2"

[dev-dependencies]
kayrx-karx = "0.1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1